# valantines-game

./: .gitignore  pyproject.toml
backend/: app.py
backend/static/: app.js  heartcatch.js
backend/templates/: heartcatch.html  index.html  love_letter.html  play.html
