[tool.poetry]
name = "valantines"
version = "0.1.0"
description = "Valentine Flask web app"
authors = ["Spandan"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
